-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.978 2011-04-26 17:52:48 guru Exp $
-----------------------------------------------------------------------------------------

2011-04-26	jluis
	* gmt_gdalwrite.c:	New function to write files via GDAL (very little testing)
	* gmt_gdalread.h:	Add new struct to interface with GMT_gdalwrite
	* grdimage_func.c:	Add new (still undocumented) options -d & -F to allow saving
				images directly in raster formats via GDAL.
				
2011-04-26	pwessel
	* gmt_support.c:	All boundcond functions modified as old structs EDGEINFO and
				BCR are simplified into a few parameters in the GRDHEADER,
				eliminating overhead.
	* gmt_grdio.c:		Grid boundary conditions are applied immediately after the read
				stage, so all program reading grids will have correct boundary
				rows/cols already set.
	* *.c:			All programs needing grid interpolation no longer have to explicitly
				parse, init, and set boundary conditions.

2011-04-25	remko
	* grdimage_func.c:	Add half a cell at edge when projecting pixel grid.
	* gmt_map.c:		When longitude spans 360 in Lambert projection, set is_world = TRUE.
	* gmt_grdio.c (GMT_grd_setregion):	Keep grid longitude range when map.is_world.		
	* gmt_grd.h:		Restrict GMT_is_subgrid to actual subgrids.
	* gmt.txt:		Added -n option.
	* explain_-n_full.txt:	Fixed typos, fixed wrong GMT_n_OPT
	* gmt_plot.c, gmt_support.c:	Removed GMT_grid_clip_*.

2011-04-25	jluis
	* gmt_map.c:		Removed GMT_grdproject_init in favor of GMT_project_init
				that takes as second input a GRD_HEADER pointer instead of
				pointers to GMT_GRID or GMT_IMAGE containers.
	* grdimage_func.c:	When illuminating an image if -R is not set use grid limits

2011-04-24	pwessel
	* gmt*.c:		Introduced common option -n[b|c|l|n][+a][+b<BC>][+t<threshold>]
				that can be used to change grid interpolation parameters.
				Replaces a mix of -S, -Q, -L options across many programs.